--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@types/jwt-decode": "^3.1.0",
@@ -15,7 +16,8 @@
     "jwt-decode": "^4.0.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
