--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "rewrites": [
       {
         "source": "/api/:path*",
-        "destination": "http://92.38.49.9:8080/api/:path*"
+        "destination": "http://92.38.48.142:8080//api/:path*"
       }
     ]
   }
